--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-	<h1>New Background Generator</h1>
+	<h1>Fudge's Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color1" value="#ff0000">
 	<h2>Current CSS Background</h3>
 	<h3></h3>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
